refactor: implement SonarCloud suggestions